--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,11 @@
       class="hero-section text-center d-flex align-items-center justify-content-center"
     >
       <div class="hero-content">
-        <h1 class="display-1 fw-light mb-4">Carolina & Joan</h1>
-        <h2 class="h3 fw-light mb-4">Nos Casamos</h2>
-        <p class="lead mb-4">Te invitamos a celebrar este momento especial</p>
+        <h1 class="display-1 fw-light mb-4">Caro y Joan</h1>
+        <h2 class="h3 fw-light mb-4">¡Nos Casamos!</h2>
+        <p class="lead mb-4">
+          Y queremos compartir con vos este momento especial
+        </p>
         <div class="date-info">
           <p class="h4 mb-2">Sábado, 7 de Marzo</p>
           <p class="h5 mb-4">2025 • 19:00 hs</p>
@@ -42,10 +44,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h3 class="mb-5">Nuestros Momentos Especiales</h3>
-            <p class="lead mb-5">
-              Compartimos contigo algunos de nuestros recuerdos más preciados
-            </p>
+            <h3 class="mb-5">
+              Mientras uno esté vivo, debe amar lo que más pueda
+            </h3>
 
             <!-- Carousel de Fotos -->
             <div
@@ -101,15 +102,10 @@
                 <div class="carousel-item active">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo1.jpg"
+                      src="./assets/img/photo1.jpeg"
                       class="d-block w-100"
-                      alt="Nuestro Primer Encuentro"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 1 - Nuestro Primer Encuentro</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>Nuestro Primer Encuentro</h5>
-                      <p>El día que todo comenzó</p>
-                    </div>
                   </div>
                 </div>
 
@@ -117,15 +113,10 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo2.jpg"
+                      src="./assets/img/photo2.jpeg"
                       class="d-block w-100"
-                      alt="Momentos Compartidos"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 2 - Momentos Compartidos</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>Momentos Compartidos</h5>
-                      <p>Aventuras juntos</p>
-                    </div>
                   </div>
                 </div>
 
@@ -133,15 +124,10 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo3.jpg"
+                      src="./assets/img/photo3.jpeg"
                       class="d-block w-100"
-                      alt="El Día de la Propuesta"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 3 - El Día de la Propuesta</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>El Día de la Propuesta</h5>
-                      <p>Un momento mágico</p>
-                    </div>
                   </div>
                 </div>
 
@@ -149,15 +135,10 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo4.jpg"
+                      src="./assets/img/photo4.jpeg"
                       class="d-block w-100"
-                      alt="Preparando el Casamiento"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 4 - Preparando el Casamiento</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>Preparando el Casamiento</h5>
-                      <p>Planificando nuestro futuro</p>
-                    </div>
                   </div>
                 </div>
 
@@ -165,15 +146,10 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo5.jpg"
+                      src="./assets/img/photo5.jpeg"
                       class="d-block w-100"
-                      alt="Familia y Amigos"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 5 - Familia y Amigos</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>Familia y Amigos</h5>
-                      <p>Los que nos acompañan</p>
-                    </div>
                   </div>
                 </div>
 
@@ -181,15 +157,11 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo6.jpg"
+                      src="./assets/img/photo6.jpeg"
                       class="d-block w-100"
                       alt="Nuestro Amor"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
                     />
-                    <div class="carousel-caption">
-                      <h5>Nuestro Amor</h5>
-                      <p>Creciendo cada día</p>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -219,13 +191,6 @@
                 ></span>
                 <span class="visually-hidden">Siguiente</span>
               </button>
-            </div>
-
-            <div class="text-center mt-5">
-              <p class="text-muted">
-                <i class="fas fa-images me-2"></i>
-                Desliza para ver más fotos o usa los controles
-              </p>
             </div>
           </div>
         </div>
@@ -285,44 +250,34 @@
 
               <div class="col-md-6">
                 <div class="detail-card">
-                  <i class="fas fa-clock schedule-clock-icon mb-3"></i>
+                  <i class="fas fa-clock schedule-clock-icon mb-3 icon"></i>
                   <h5>Horario</h5>
                   <p>
                     Ceremonia: 19:00 hs<br />
-                    Recepción: 20:00 hs<br />
-                    Cena: 21:00 hs
+                    ¡Luego cena y fiesta! 🎉<br />
+                    Evento exclusivo para adultos<br />
+                    Agradecemos tu comprensión
                   </p>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="detail-card">
-                  <img
-                    src="./assets/img/Fiesta-Minimalista-Verde-Musgo-2.gif"
-                    alt="Menú"
-                    class="menu-icon mb-3"
-                  />
-                  <h5>Menú</h5>
-                  <p>
-                    Entrada, plato principal<br />
-                    Postre y bebidas<br />
-                    Menú vegetariano disponible
-                  </p>
+                  <i class="fas fa-solid fa-shirt mb-3 icon"></i>
+                  <h5>¿Qué me pongo?</h5>
+                  <p>Vestimenta formal elegante</p>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="detail-card">
-                  <img
-                    src="./assets/img/musica-Minimalista-Verde-Musgo-3.gif"
-                    alt="Entretenimiento"
-                    class="entertainment-icon mb-3"
-                  />
-                  <h5>Entretenimiento</h5>
+                  <i class="fas fa-solid fa-gifts mb-3 icon"></i>
+                  <h5>Regalo</h5>
                   <p>
-                    Música en vivo<br />
-                    DJ para el baile<br />
-                    Actividades para niños
+                    Tu presencia es el mejor regalo,<br />Si aún así querés
+                    hacernos un obsequio,<br />
+                    agradecemos contribuciones para nuestra luna de miel!<br />
+                    ALIAS UALA
                   </p>
                 </div>
               </div>
@@ -333,7 +288,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="py-5 faq-section">
+    <!--section class="py-5 faq-section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-start">
@@ -429,7 +384,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section-->
 
     <!-- RSVP Section -->
     <section class="py-5 bg-light">
@@ -437,9 +392,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
             <h3 class="mb-4">Confirma tu Asistencia</h3>
-            <p class="mb-4">
-              Por favor confirma tu presencia antes del 1 de Diciembre
-            </p>
+            <p class="mb-4">¡No te olvides de confirmar tu asistencia!</p>
 
             <div class="rsvp-buttons">
               <a
@@ -466,30 +419,18 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section class="py-5">
+    <!-- Photo 8 Section -->
+    <section class="py-5 photo8-section">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-8 text-center">
-            <h3 class="mb-4">Contacto</h3>
-            <p class="mb-4">Para cualquier consulta sobre el evento</p>
-
-            <div class="row g-4">
-              <div class="col-md-6">
-                <div class="contact-info">
-                  <i class="fas fa-phone fa-2x text-primary mb-3"></i>
-                  <h5>María</h5>
-                  <p>+54 11 1234-5678</p>
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <div class="contact-info">
-                  <i class="fas fa-phone fa-2x text-primary mb-3"></i>
-                  <h5>Juan</h5>
-                  <p>+54 11 8765-4321</p>
-                </div>
-              </div>
+          <div class="col-lg-10 col-xl-8">
+            <div class="photo8-container">
+              <img
+                src="./assets/img/photo8.jpeg"
+                alt="Nuestro Amor"
+                class="photo8-full"
+                onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 8</text></svg>'"
+              />
             </div>
           </div>
         </div>
@@ -499,7 +440,7 @@
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white text-center">
       <div class="container">
-        <p class="mb-0">Con amor, Carolina & Joan</p>
+        <h2 class="mb-0">Con amor, Carolina & Joan</h2>
         <p class="small text-muted mb-0">
           ¡Esperamos verte en nuestro día especial!
         </p>
