--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -260,7 +260,7 @@
                   <h5>Horario</h5>
                   <p>
                     Ceremonia: 19:00 hs<br />
-                    ¡Luego cena y fiesta! 🎉<br />
+                    ¡LUEGO CENA Y FIESTA! 🎉<br />
                     Evento exclusivo para adultos<br />
                     Agradecemos tu comprensión
                   </p>
