--- a/src/index.html
+++ b/src/index.html
@@ -260,9 +260,7 @@
                   <h5>Horario</h5>
                   <p>
                     Ceremonia: 19:00 hs<br />
-                    ¡LUEGO CENA Y FIESTA! 🎉<br />
-                    Evento exclusivo para adultos<br />
-                    Agradecemos tu comprensión
+                    ¡LUEGO CENA Y FIESTA! 🎉
                   </p>
                 </div>
               </div>
@@ -283,7 +281,7 @@
                     Tu presencia es el mejor regalo,<br />Si aún así querés
                     hacernos un obsequio,<br />
                     agradecemos contribuciones para nuestra luna de miel!<br />
-                    ALIAS UALA
+                    ALIAS bodajoanycaro
                   </p>
                 </div>
               </div>
@@ -391,6 +389,20 @@
         </div>
       </div>
     </section-->
+
+    <!-- Adult Event Notice Section -->
+    <section class="py-4">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <p class="mb-0">
+              <strong>Evento exclusivo para adultos</strong><br />
+              Agradecemos tu comprensión
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- RSVP Section -->
     <section class="py-5 bg-light">
