--- a/src/index.html
+++ b/src/index.html
@@ -391,7 +391,7 @@
     </section-->
 
     <!-- Adult Event Notice Section -->
-    <section class="py-4">
+    <section class="py-4 adult-event-section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
