--- a/src/index.html
+++ b/src/index.html
@@ -281,7 +281,7 @@
                     Tu presencia es el mejor regalo,<br />Si aún así querés
                     hacernos un obsequio,<br />
                     agradecemos contribuciones para nuestra luna de miel!<br />
-                    ALIAS bodajoanycaro
+                    ALIAS: <strong>bodajoanycaro</strong>
                   </p>
                 </div>
               </div>
@@ -396,7 +396,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <p class="mb-0">
-              <strong>Evento exclusivo para adultos</strong><br />
+              <strong>EVENTO EXCLUSIVO PARA ADULTOS</strong><br />
               Agradecemos tu comprensión
             </p>
           </div>
