--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       class="hero-section text-center d-flex align-items-center justify-content-center"
     >
       <div class="hero-content">
-        <h1 class="display-1 fw-light mb-4">Caro y Joan</h1>
+        <h1 class="display-1 fw-light mb-4">Caro & Joan</h1>
         <h2 class="h3 fw-light mb-4">¡Nos Casamos!</h2>
         <p class="lead mb-4">
           Y queremos compartir con vos este momento especial
