--- a/src/index.html
+++ b/src/index.html
@@ -396,7 +396,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <p class="mb-0">
-              <strong>EVENTO EXCLUSIVO PARA ADULTOS</strong><br />
+              <h3><strong>EVENTO EXCLUSIVO PARA ADULTOS</strong></h3><br />
               Agradecemos tu comprensión
             </p>
           </div>
