--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,50 @@
                   </div>
                 </div>
               </div>
+              <div class="carousel-item">
+                <div class="carousel-photo">
+                  <img
+                    src="./assets/img/photo7.jpeg"
+                    class="d-block w-100"
+                    alt="Nuestro Amor"
+                    onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="carousel-photo">
+                <img
+                  src="./assets/img/photo8.jpeg"
+                  class="d-block w-100"
+                  alt="Nuestro Amor"
+                  onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-photo">
+              <img
+                src="./assets/img/photo9.jpeg"
+                class="d-block w-100"
+                alt="Nuestro Amor"
+                onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-photo">
+            <img
+              src="./assets/img/photo10.jpeg"
+              class="d-block w-100"
+              alt="Nuestro Amor"
+              onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
+            />
+          </div>
+        </div>
+      </div>
 
               <!-- Controles -->
               <button
@@ -291,104 +335,6 @@
       </div>
     </section>
 
-    <!-- FAQ Section -->
-    <!--section class="py-5 faq-section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-start">
-            <h3 class="mb-4 faq-title">Te contamos</h3>
-            <h4 class="mb-5 faq-subtitle">todos los detalles…</h4>
-
-            <div class="accordion faq-accordion" id="faqAccordion">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                  <button
-                    class="accordion-button"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseOne"
-                    aria-expanded="true"
-                    aria-controls="collapseOne"
-                  >
-                    ¿QUÉ ME PONGO?
-                  </button>
-                </h2>
-                <div
-                  id="collapseOne"
-                  class="accordion-collapse collapse show"
-                  aria-labelledby="headingOne"
-                  data-bs-parent="#faqAccordion"
-                >
-                  <div class="accordion-body">
-                    <p>
-                      Vestimenta formal elegante. Preferimos colores claros y
-                      pasteles.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo"
-                    aria-expanded="false"
-                    aria-controls="collapseTwo"
-                  >
-                    ¿PUEDEN IR NIÑOS?
-                  </button>
-                </h2>
-                <div
-                  id="collapseTwo"
-                  class="accordion-collapse collapse"
-                  aria-labelledby="headingTwo"
-                  data-bs-parent="#faqAccordion"
-                >
-                  <div class="accordion-body">
-                    <p>
-                      ¡Por supuesto! Los niños son bienvenidos. Habrá
-                      actividades especiales para ellos.
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree"
-                    aria-expanded="false"
-                    aria-controls="collapseThree"
-                  >
-                    SI QUERÉS HACERNOS UN REGALO...
-                  </button>
-                </h2>
-                <div
-                  id="collapseThree"
-                  class="accordion-collapse collapse"
-                  aria-labelledby="headingThree"
-                  data-bs-parent="#faqAccordion"
-                >
-                  <div class="accordion-body">
-                    <p>
-                      Tu presencia es el mejor regalo. Si aún así querés
-                      hacernos un obsequio, agradecemos contribuciones para
-                      nuestra luna de miel.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section-->
 
     <!-- Adult Event Notice Section -->
     <section class="py-4 adult-event-section">
