--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,36 @@
                   data-bs-slide-to="5"
                   aria-label="Slide 6"
                 ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="6"
+                  aria-label="Slide 7"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="7"
+                  aria-label="Slide 8"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="8"
+                  aria-label="Slide 9"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="9"
+                  aria-label="Slide 10"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="10"
+                  aria-label="Slide 11"
+                ></button>
               </div>
 
               <!-- Slides -->
@@ -170,52 +200,67 @@
                     />
                   </div>
                 </div>
+
+                <!-- Slide 7 -->
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
                       src="./assets/img/photo7.jpeg"
                       class="d-block w-100"
-                      alt="Nuestro Amor"
-                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
+                      alt="Foto 7"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 7</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 8 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo8.jpeg"
+                      class="d-block w-100"
+                      alt="Foto 8"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 8</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 9 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo9.jpeg"
+                      class="d-block w-100"
+                      alt="Foto 9"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 9</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 10 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo10.jpeg"
+                      class="d-block w-100"
+                      alt="Foto 10"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 10</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 11 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo11.jpeg"
+                      class="d-block w-100"
+                      alt="Foto 11"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 11</text></svg>'"
                     />
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="carousel-photo">
-                  <img
-                    src="./assets/img/photo8.jpeg"
-                    class="d-block w-100"
-                    alt="Nuestro Amor"
-                    onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="carousel-photo">
-                <img
-                  src="./assets/img/photo9.jpeg"
-                  class="d-block w-100"
-                  alt="Nuestro Amor"
-                  onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="carousel-photo">
-              <img
-                src="./assets/img/photo10.jpeg"
-                class="d-block w-100"
-                alt="Nuestro Amor"
-                onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
-              />
-            </div>
-          </div>
-              </div>
-
-      </div>
 
               <!-- Controles -->
               <button
@@ -335,6 +380,7 @@
         </div>
       </div>
     </section>
+
 
 
     <!-- Adult Event Notice Section -->
