--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,24 @@
                   data-bs-slide-to="10"
                   aria-label="Slide 11"
                 ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="11"
+                  aria-label="Slide 12"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="12"
+                  aria-label="Slide 13"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#photosCarousel"
+                  data-bs-slide-to="13"
+                  aria-label="Slide 14"
+                ></button>
               </div>
 
               <!-- Slides -->
@@ -257,6 +275,42 @@
                       class="d-block w-100"
                       alt="Foto 11"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 11</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 12 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo12.jpeg"
+                      class="d-block w-100"
+                      alt="Foto 12"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 12</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 13 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo13.jpg"
+                      class="d-block w-100"
+                      alt="Foto 13"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 13</text></svg>'"
+                    />
+                  </div>
+                </div>
+
+                <!-- Slide 14 -->
+                <div class="carousel-item">
+                  <div class="carousel-photo">
+                    <img
+                      src="./assets/img/photo14.JPG"
+                      class="d-block w-100"
+                      alt="Foto 14"
+                      onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 14</text></svg>'"
                     />
                   </div>
                 </div>
