--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
             <h3 class="mb-5">
-              Mientras uno esté vivo, debe amar lo que más pueda
+              Mientras uno esté vivo, uno debe amar lo que más pueda
             </h3>
 
             <!-- Carousel de Fotos -->
@@ -160,7 +160,7 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo3.jpeg"
+                      src="./assets/img/photo17.jpeg?v=2"
                       class="d-block w-100"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 3 - El Día de la Propuesta</text></svg>'"
                     />
@@ -182,7 +182,7 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo6.jpeg"
+                      src="./assets/img/photo16.jpeg?v=2"
                       class="d-block w-100"
                       alt="Nuestro Amor"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 6 - Nuestro Amor</text></svg>'"
