--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                 <div class="carousel-item">
                   <div class="carousel-photo">
                     <img
-                      src="./assets/img/photo8.jpeg"
+                      src="./assets/img/photo8.jpeg?v=2"
                       class="d-block w-100"
                       alt="Foto 8"
                       onerror="this.src='data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 800 400\'><rect width=\'800\' height=\'400\' fill=\'%23f5f5dc\'/><text x=\'400\' y=\'200\' text-anchor=\'middle\' font-family=\'Arial\' font-size=\'24\' fill=\'%23d2b48c\'>Foto 8</text></svg>'"
