--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
                     Tu presencia es el mejor regalo,<br />Si aún así querés
                     hacernos un obsequio,<br />
                     agradecemos contribuciones para nuestra luna de miel!<br />
-                    ALIAS: <br /><strong>bodajoanycaro</strong>
+                    ALIAS: <br /><strong>bodacaroyjoan</strong>
                   </p>
                 </div>
               </div>
