--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Music Player Button -->
+    <button id="musicPlayerBtn" class="music-player-btn" aria-label="Reproducir música">
+      <i class="fas fa-music"></i>
+    </button>
+    <audio id="backgroundMusic" loop>
+      <source src="./assets/music/music.mp3" type="audio/mpeg">
+    </audio>
+
     <!-- Hero Section - Imagen -->
     <div
       class="hero-section text-center d-flex align-items-center justify-content-center"
