--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,7 @@
                   <p>
                     Salón de Eventos "La Encantada Patagonia"<br />
                     Pellegrini 1415<br />
-                    Ploter, Neuquén
+                    Plottier, Neuquén
                   </p>
                   <small class="text-muted">
                     <i class="fas fa-info-circle me-1"></i>Haz clic para ver en
